--- a/projects/login-form/src/lib/layouts/modal-wrapper/modal-wrapper.component.html
+++ b/projects/login-form/src/lib/layouts/modal-wrapper/modal-wrapper.component.html
@@ -1,14 +1,14 @@
 <div class="header py-2 px-4">
   <div class="row align-items-center">
     <div class="col">
-      <div *ngIf="!isFirst && formType === forms.PASSWORD">
+      <div *ngIf="!isFirst && formType === forms.PWD">
         <span class="h5 font-weight-light">{{ headerLabels.lostPasswordLabel }}</span>
       </div>
-      <div *ngIf="isFirst && formType === forms.PASSWORD">
+      <div *ngIf="isFirst && formType === forms.PWD">
         <span class="d-block h5 mb-0 font-weight-light">{{ headerLabels.updatePasswordLabel }}</span>
         <span class="d-block font-weight-light small">{{ headerLabels.updatePasswordMessageLabel }}</span>
       </div>
-      <div *ngIf="formType === 'mfa'">
+      <div *ngIf="formType === forms.MFA || formType === forms.MFA_SETUP">
         <span class="h5 font-weight-light">{{ headerLabels.mfaCodeLabel }}</span>
       </div>
     </div>
@@ -20,18 +20,18 @@
   </div>
 </div>
 <mat-dialog-content class="py-4">
-  <!-- NOTE: Pass Form -->
-  <cal-pass-form *ngIf="formType === forms.PASSWORD" 
-    [btnShowPass]="btnShowPassOnPassForm" 
-    [btnClearCode]="btnClearCodeOnPassForm" 
+  <!-- NOTE: Pwd Form -->
+  <cal-pwd-form *ngIf="formType === forms.PWD" 
+    [btnShowPwd]="btnShowPwdOnPwdForm" 
+    [btnClearCode]="btnClearCodeOnPwdForm" 
     [isFirst]="isFirst" 
-    [passLabels]="passLabels" 
-    [passPolicies]="passPolicies" 
-    [err]="errOnPassForm" 
+    [pwdLabels]="pwdLabels" 
+    [pwdPolicies]="pwdPolicies" 
+    [err]="errOnPwdForm" 
     (firstConnection)="relayFirstLogEvent($event)" 
-    (lostPassword)="relayLostPassEvent($event)">
-  </cal-pass-form>
-  <!-- NOTE: MFA form -->
+    (lostPassword)="relayLostPwdEvent($event)">
+  </cal-pwd-form>
+  <!-- NOTE: MFA Setup Form -->
   <cal-mfa-setup-form *ngIf="formType === forms.MFA_SETUP" 
     [btnClearCode]="btnClearCodeOnMfaForm" 
     [mfaSetupLabels]="mfaSetupLabels" 
@@ -40,7 +40,7 @@
     [err]="errOnMfaForm" 
     (saveMfa)="relaySaveMfaKeyEvent($event)">
   </cal-mfa-setup-form>
-  <!-- NOTE: MFA form -->
+  <!-- NOTE: MFA Form -->
   <cal-mfa-form *ngIf="formType === forms.MFA" 
     [btnClearCode]="btnClearCodeOnMfaForm" 
     [mfaLabels]="mfaLabels" 
