--- a/projects/login-form/src/lib/login-form.component.html
+++ b/projects/login-form/src/lib/login-form.component.html
@@ -5,32 +5,33 @@
         <div class="col">
           <div class="row no-gutters">
             <div class="col">
-              <!-- NOTE: Login -->
+              <!-- NOTE: Username -->
               <mat-form-field class="w-100">
                 <div matPrefix class="mr-2" *ngIf="iconUserOnLoginForm">
                   <mat-icon class="align-bottom">person</mat-icon>
                 </div>
-                <input matInput formControlName="login" 
+                <input matInput formControlName="username" 
                   name="username" autocomplete="username" 
-                  placeholder="{{ loginLabels.loginLabel }}" 
+                  placeholder="{{ loginLabels.usernameLabel }}" 
                   type="text"/> <!-- TODO: switch / case : email, phone, none -->
-                <button *ngIf="formGroup.controls.login.valid && btnClearUserOnLoginForm" 
+                <button *ngIf="formGroup.controls.username.value?.length > 0 && btnClearUserOnLoginForm" 
                   mat-button matSuffix mat-icon-button aria-label="Clear" 
-                  color="primary" (click)="formGroup.controls.login.setValue('')" 
+                  color="primary" (click)="formGroup.controls.username.setValue('')" 
+                  [disabled]="formType === forms.MFA && formLayouts.mfa === layouts.INLINE ? true : false" 
                   type="button">
                   <mat-icon>close</mat-icon>
                 </button>
                 <!-- NOTE: Error message(s) -->
-                <mat-hint align="start" *ngIf="formGroup.controls.login.errors?.required && errOnLoginForm">
+                <mat-hint align="start" *ngIf="formGroup.controls.username.errors?.required && errOnLoginForm">
                   {{ loginLabels.fieldRequiredLabel }}
                 </mat-hint>
-                <mat-hint align="start" *ngIf="formGroup.controls.login.errors?.pattern && errOnLoginForm && userPolicy === userPolicies.EMAIL">
+                <mat-hint align="start" *ngIf="formGroup.controls.username.errors?.pattern && errOnLoginForm && usrPolicy === userPolicies.EMAIL">
                   {{ loginLabels.fieldEmailLabel }}
                 </mat-hint>
-                <mat-hint align="start" *ngIf="formGroup.controls.login.errors?.pattern && errOnLoginForm && userPolicy === userPolicies.PHONE">
+                <mat-hint align="start" *ngIf="formGroup.controls.username.errors?.pattern && errOnLoginForm && usrPolicy === userPolicies.PHONE">
                   {{ loginLabels.fieldPhoneLabel }}
                 </mat-hint>
-                <mat-hint align="start" *ngIf="formGroup.controls.login.errors?.pattern && errOnLoginForm && userPolicy && userPolicy !== userPolicies.EMAIL && userPolicy !== userPolicies.PHONE">
+                <mat-hint align="start" *ngIf="formGroup.controls.username.errors?.pattern && errOnLoginForm && usrPolicy && usrPolicy !== userPolicies.EMAIL && usrPolicy !== userPolicies.PHONE">
                   {{ loginLabels.fieldCustomLabel }}
                 </mat-hint>
               </mat-form-field>
@@ -40,16 +41,17 @@
             <div class="col">
               <!-- NOTE: Password -->
               <mat-form-field class="w-100">
-                <div matPrefix class="mr-2" *ngIf="iconPassOnLoginForm">
+                <div matPrefix class="mr-2" *ngIf="iconPwdOnLoginForm">
                   <mat-icon class="align-bottom">lock</mat-icon>
                 </div>
                 <input matInput formControlName="password" 
                   name="password" autocomplete="password" 
                   placeholder="{{ loginLabels.passwordLabel }}" 
                   type="{{ showPassword ? 'text' : 'password' }}"/>
-                <button *ngIf="btnShowPassOnLoginForm" 
+                <button *ngIf="btnShowPwdOnLoginForm" 
                   mat-button matSuffix mat-icon-button aria-label="Clear" 
                   color="primary" (click)="showPassword=!showPassword" 
+                  [disabled]="formType === forms.MFA && formLayouts.mfa === layouts.INLINE ? true : false" 
                   type="button">
                   <mat-icon>{{ showPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
@@ -60,64 +62,85 @@
               </mat-form-field>
             </div> 
           </div>
-          <div class="row no-gutters pb-3">
-            <div class="col text-left">
-              <button mat-button (click)="forgottenPassword()" color="primary" class="small" type="button">
-                {{ loginLabels.forgottenPasswordLabel }}
-              </button>
-            </div>
-            <div class="col text-right">
-              <button mat-raised-button type="submit" color="primary" [disabled]="!formGroup.valid" class="small text-uppercase">
-                {{ loginLabels.signInLabel }}
-              </button>
-            </div>
-          </div>
-          <div class="row no-gutters">
-            <div class="col text-center">
-              <!-- NOTE: Google -->
-              <div class="d-block mb-3" *ngIf="socialButtons.google">
-                <button mat-raised-button type="button" class="mat-raised-button cal-btn google {{ theme }}" (click)="onClickLoginSocial('google')">
-                  <span class="cal-bg-icon">
-                    <mat-icon class="align-middle cal-icon" svgIcon="google"></mat-icon>
-                  </span>
-                  <span class="cal-label">{{ loginLabels.googleSignInLabel }}</span>
-                </button>
+          <ng-container *ngIf="!( formType === forms.MFA && formLayouts.mfa === layouts.INLINE )">
+            <div class="row no-gutters pb-3">
+              <div class="col text-left">
+                <!-- TODO: Remember me -->
               </div>
-              <!-- NOTE: Facebook -->
-              <div class="d-block" *ngIf="socialButtons.facebook">
-                <button mat-raised-button type="button" class="mat-raised-button cal-btn facebook" (click)="onClickLoginSocial('facebook')">
-                  <span class="cal-bg-icon">
-                    <mat-icon class="align-middle cal-icon" svgIcon="facebook"></mat-icon>
-                  </span>
-                  <span class="cal-label">{{ loginLabels.facebookSignInLabel }}</span>
+              <div class="col text-right" *ngIf="btnForgotPwdOnLoginForm">
+                <a (click)="forgotPassword()" href="#" class="small">
+                  {{ loginLabels.forgotPasswordLabel }}
+                </a>
+              </div>
+            </div>
+            <div class="row no-gutters pb-3">
+              <div class="col text-right">
+                <button mat-button (click)="onClickSignUp()" type="button" color="primary" class="small text-uppercase mr-3" *ngIf="btnSignUpOnLoginForm">
+                  {{ loginLabels.signUpLabel }}
+                </button>
+                <button mat-raised-button type="submit" color="primary" [disabled]="!formGroup.valid" class="small text-uppercase">
+                  {{ loginLabels.signInLabel }}
                 </button>
               </div>
             </div>
-          </div>
+            <div class="row no-gutters">
+              <div class="col text-center">
+                <!-- NOTE: Google -->
+                <div class="d-block mb-3" *ngIf="socialButtons.google">
+                  <button mat-raised-button type="button" class="mat-raised-button cal-btn google {{ theme }}" (click)="onClickLoginSocial('google')">
+                    <span class="cal-bg-icon">
+                      <mat-icon class="align-middle cal-icon" svgIcon="google"></mat-icon>
+                    </span>
+                    <span class="cal-label">{{ loginLabels.googleSignInLabel }}</span>
+                  </button>
+                </div>
+                <!-- NOTE: Facebook -->
+                <div class="d-block mb-3" *ngIf="socialButtons.facebook">
+                  <button mat-raised-button type="button" class="cal-btn facebook" (click)="onClickLoginSocial('facebook')">
+                    <span class="cal-bg-icon">
+                      <mat-icon class="align-middle cal-icon" svgIcon="facebook"></mat-icon>
+                    </span>
+                    <span class="cal-label">{{ loginLabels.facebookSignInLabel }}</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </ng-container>
         </div>
       </div>
     </form>
+    <div class="row no-gutters" *ngIf="formType === forms.MFA && formLayouts.mfa === layouts.INLINE">
+      <div class="col">
+        <!-- NOTE: Inline MFA -->
+        <cal-mfa-form 
+          [btnClearCode]="btnClearCodeOnMfaForm" 
+          [mfaLabels]="mfaLabels" 
+          [err]="errOnMfaForm" 
+          (sendMfa)="tabSendMfaCode($event)">
+        </cal-mfa-form>
+      </div>
+    </div>
   </mat-tab>
-  <mat-tab label="pass-form" *ngIf="formLayouts | existsLayout: layouts.TAB">
+  <mat-tab label="pwd-form" *ngIf="formLayouts | existsLayout: layouts.TAB">
     <!-- NOTE: Tab form -->
     <cal-tab-wrapper 
       [formType]="formType" 
       [isFirst]="isFirst" 
-      [code]   = "code" 
-      [qrCode] = "qrCode" 
+      [code]   ="code" 
+      [qrCode] ="qrCode" 
       [headerLabels]="headerLabels" 
-      [passLabels]="passLabels" 
-      [passPolicies]="passPolicies" 
-      [errOnPassForm]="errOnPassForm" 
+      [pwdLabels]="pwdLabels" 
+      [pwdPolicies]="pwdPolicies" 
+      [errOnPwdForm]="errOnPwdForm" 
       [errOnMfaForm]="errOnMfaForm" 
-      [btnShowPassOnPassForm]="btnShowPassOnPassForm" 
-      [btnClearCodeOnPassForm]="btnClearCodeOnPassForm" 
+      [btnShowPwdOnPwdForm]="btnShowPwdOnPwdForm" 
+      [btnClearCodeOnPwdForm]="btnClearCodeOnPwdForm" 
       [mfaSetupLabels]="mfaSetupLabels" 
       [mfaLabels]="mfaLabels" 
       [btnClearCodeOnMfaForm]="btnClearCodeOnMfaForm" 
       (sendCloseTab)="onClickCloseTab($event)" 
       (relayFirstLog)="tabFirstLog($event)" 
-      (relayLostPass)="tabLostPass($event)" 
+      (relayLostPwd)="tabLostPwd($event)" 
       (relaySaveMfaKey)="tabSaveMfaKey($event)" 
       (relaySendMfaCode)="tabSendMfaCode($event)">
     </cal-tab-wrapper>
