--- a/projects/login-form/src/lib/forms/mfa-setup-form/mfa-setup-form.component.html
+++ b/projects/login-form/src/lib/forms/mfa-setup-form/mfa-setup-form.component.html
@@ -7,8 +7,8 @@
   <mat-form-field class="w-100">
     <input matInput formControlName="verifCode" 
       name="verifCode" placeholder="{{ mfaSetupLabels.verifCodeLabel }}" 
-      type="text"/>
-    <!-- TODO: Check if non witespace can be applied -->
+      pattern="\\d{6}" 
+      type="text"/> <!-- NOTE: Pattern matches 6 digits -->
     <button *ngIf="formGroup.controls.verifCode.valid && btnClearCode" 
       mat-button matSuffix mat-icon-button aria-label="Clear" 
       color="primary" (click)="formGroup.controls.verifCode.setValue('')" 
@@ -18,6 +18,9 @@
     <!-- NOTE: Error messages -->
     <mat-hint align="start" *ngIf="formGroup.controls.verifCode.errors?.required && err">
       {{ mfaSetupLabels.fieldRequiredLabel }}
+    </mat-hint>
+    <mat-hint align="start" *ngIf="formGroup.controls.verifCode.errors?.pattern && err">
+      {{ mfaSetupLabels.fieldSixDigitsLabel }}
     </mat-hint>
   </mat-form-field>
   <div class="row w-100 no-gutters">
