--- a/projects/login-form/src/lib/login-form.component.scss
+++ b/projects/login-form/src/lib/login-form.component.scss
@@ -6,6 +6,13 @@ mat-form-field mat-icon {
   color: grey;
 }
 
+.login-wrapper {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
 // https://github.com/TerryMooreII/materialize-social/blob/master/materialize-social.less
 
 // @import url('https://fonts.googleapis.com/css?family=Roboto:500');
