--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,65 +2,59 @@
 @import '../../node_modules/bootstrap/scss/variables.scss';
 @import '../../node_modules/bootstrap/scss/mixins.scss';
 
-.sidebar {
-  @include media-breakpoint-up(md) {
+#gui-container {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+@include media-breakpoint-down(sm) {
+  .offcanvas-collapse {
     position: fixed;
+    top: 56px; /* Height of navbar */
+    bottom: 0;
+    width: 100%;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    overflow-y: auto;
+    background-color: var(--gray-dark);
+    transition: -webkit-transform .3s ease-in-out;
+    transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
   }
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  padding: 8px 0 0;
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1)
+  .offcanvas-collapse.open {
+    -webkit-transform: translateX(-1rem);
+    transform: translateX(-1rem); /* Account for horizontal padding on navbar */
+  }
+  #gui-container {
+    position: relative;
+  }
 }
 
-.sidebar-sticky {
+.nav-scroller {
   position: relative;
-  top: 0;
-  @include media-breakpoint-up(md) {
-    height: calc(100vh - 48px);
-  }
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
 }
 
-.sidebar-sticky {
-  @include media-breakpoint-up(md) {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
+.nav-scroller .nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  color: rgba(255, 255, 255, .75);
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
 }
 
 .nav-link {
-  display: block;
-  padding: .5rem 1rem;
   cursor: pointer;
-}
-
-.nav-link:focus, .nav-link:hover {
-  text-decoration: none;
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #969696;
-}
-
-.sidebar .nav-link:hover {
-  font-weight: 500;
-  color: #333333;
-}
-
-.sidebar .nav-link.active:hover {
-  color: #007bff;
 }
