--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -3,8 +3,20 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
 body {
+  padding-top: 56px;
+}
+html, body {
   font-family: Roboto, Arial, sans-serif;
-  margin: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  position: relative;
+  z-index: -1;
+  overflow-x: hidden; /* Prevent scroll on narrow devices */
+}
+.container-demo {
+  position: relative;
+  z-index: -1;
 }
 
 // ----------------------------------------------------------------------------------------------
