[Upd] style + username + readme

--- a/projects/login-form/src/lib/forms/pwd-form/pwd-form.component.html
+++ b/projects/login-form/src/lib/forms/pwd-form/pwd-form.component.html
@@ -33,6 +33,7 @@
     </div>
   </div>
   <!-- NOTE: <input type="password" autocomplete="new-password" will turn it off for passwords everywhere -->
+  <!-- TODO: Repeat the username ? -->
   <div class="row w-100 no-gutters">
     <div class="col">
       <mat-form-field class="w-100">
