--- a/projects/login-form/src/lib/layouts/modal-wrapper/modal-wrapper.component.html
+++ b/projects/login-form/src/lib/layouts/modal-wrapper/modal-wrapper.component.html
@@ -44,6 +44,7 @@
 <mat-dialog-content class="py-4">
   <!-- NOTE: Pwd Form -->
   <cal-pwd-form *ngIf="formType === forms.PWD" 
+    [username]="username" 
     [isFirst]="isFirst" 
     [pwdPolicies]="pwdPolicies" 
     [labels]="labels" 
